--- a/src/styles/ButtonGroup.module.css
+++ b/src/styles/ButtonGroup.module.css
@@ -1,24 +1,25 @@
 .ButtonGroup {
-    margin-top: 50px;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
-  }
-  
-  .button {
-    background-color: #4CAF50;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    border-radius: 5px;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
-  }
-  
-  .button:hover {
-    background-color: #3e8e41;
-  }
-  
+  display: grid;
+  grid-template-columns: repeat(2, 150px);
+  grid-template-rows: repeat(2, 150px);
+  gap: 15px;
+  justify-content: center;
+  align-content: center;
+  margin-bottom: 100px;
+  margin-top: 8vw;
+}
+
+.button {
+  width: 100%;
+  height: 100%;
+  background-color: #dcdcdc;
+  border: none;
+  border-radius: 5px;
+  padding: 15px 15px;
+  text-align: center;
+  font-size: 3vw;
+}
+
+.button:hover{
+  background-color: #a8a8a8;
+}
