--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,3 +1,72 @@
+.Header{
+    background-color: #D9D9D9;
+    padding: 6vw;
+}
+
+.TussenTitels{
+    font-size: 5vw;
+    margin-top: 7.5vw;
+}
+
+.SearchButton{
+    padding: 1.5vw;
+    width: 75%;
+    margin-left: 12vw;
+    text-decoration: none;
+    border: none;
+    border-radius: 2vw;
+    font-size: 3vw;
+    background-color: #D9D9D9;
+}
+
+.SearchButton:hover{
+    background-color: #a8a8a8;
+}
+
 .SwiperSlide {
     text-align: center;
+}
+
+.TitelSwiper{
+    font-size: 4vw;
+}
+
+.InfoSwiper{
+    font-size: 2.7vw;
+
+}
+
+.PrijsSwiper {
+    font-size: 3.5vw;
+}
+
+.Onderschrift{
+    font-size: 2.2vw;
+    color: #4d4d4d;
+    margin-left: 3.5vw;
+
+}
+
+.HelpContainer {
+    position: relative;
+  }
+  
+.CircleButton {
+    position: absolute;
+    top: 0;
+    right: 0;
+    border: none;
+    background-color: transparent;
+}
+  
+.Circle:hover{
+    background-color: #a8a8a8;
+  }
+
+.Circle {
+    display: block;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #D9D9D9;
 }
