--- a/src/styles/Layout.module.css
+++ b/src/styles/Layout.module.css
@@ -3,31 +3,36 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: #BFCFD9;
+    background-color: #D9D9D9;
     padding: 10px;
     display: flex;
     justify-content: space-between;
     z-index: 99;
+
 }
 
 .ButonLeft{
     padding: 10px;
     font-size: 16px;
     border-radius: 5px;
-    color: white;
+    color: black;
+    text-decoration: none;
 }
 
 .ButonRight{
     padding: 10px;
     font-size: 16px;
     border-radius: 5px;
-    color: white;
+    color: black;
+    text-decoration: none;
 }
 
 .ButonLeft:focus{
-    color: black;
+    color: white;
+    text-decoration: none;
 }
 
 .ButonRight:focus{
-    color: black;
+    color: white;
+    text-decoration: none;
 }
