--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,6 +1,13 @@
 .Header{
     background-color: #D9D9D9;
-    padding: 6vw;
+    padding: 1.5vw;
+    padding-left: 2vw;
+    padding-top: 2vw;
+}
+
+.Logo{
+    height: 13vw;
+    width: auto;
 }
 
 .TussenTitels{
@@ -70,3 +77,11 @@
     border-radius: 50%;
     background-color: #D9D9D9;
 }
+
+.Telefoon {
+    position: absolute;
+    padding-top: 1.5vw;
+    width: 35px;
+    height: 35px;
+    left: 4vw;
+  }
