--- a/src/styles/Stations.module.css
+++ b/src/styles/Stations.module.css
@@ -1,6 +1,13 @@
 .Header{
     background-color: #D9D9D9;
-    padding: 6vw;
+    padding: 1.5vw;
+    padding-left: 2vw;
+    padding-top: 2vw;
+}
+
+.Logo{
+    height: 13vw;
+    width: auto;
 }
 
 .TussenTitels{
