--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -54,34 +54,13 @@
 
 }
 
-.HelpContainer {
-    position: relative;
-  }
-  
-.CircleButton {
-    position: absolute;
-    top: 0;
-    right: 0;
-    border: none;
-    background-color: transparent;
-}
-  
-.Circle:hover{
-    background-color: #a8a8a8;
-  }
-
-.Circle {
-    display: block;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: #D9D9D9;
+.HelpContainer{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.Telefoon {
-    position: absolute;
-    padding-top: 1.5vw;
-    width: 35px;
-    height: 35px;
-    left: 4vw;
-  }
+.Telefoon{
+    height: 10vw;
+    width: auto;
+}
