--- a/src/styles/Stations.module.css
+++ b/src/styles/Stations.module.css
@@ -15,29 +15,42 @@
     margin-top: 7.5vw;
 }
 
+.OnderTitels{
+    font-size: 3.5vw;
+}
+
+.Text{
+    font-size: 2.5vw;
+}
+
 .SearchBalk{
     width: 88%;
     margin-left: 4vw;
     margin-bottom: 1.5vw;
     padding: 1.5vw;
-
-}
-
-.SearchButton{
-    padding: 1.5vw;
-    width: 75%;
-    margin-left: 12vw;
-    text-decoration: none;
-    border: none;
-    border-radius: 2vw;
     margin-bottom: 5vw;
-}
-
-.SearchButton:hover{
-    background-color: #D9D9D9;
 }
 
 .StationList{
     text-decoration: none;
     color: black;
+    display: flex;
+    align-items: center;
+    margin-bottom: 2.5vw;
+    font-size: 3.5vw;
+}
+
+.StationList .Info {
+    display: flex;
+    flex-direction: column;
+}
+
+.Beschikbaarheid{
+    height: 6vw;
+    width: auto;
+    padding-right: 2vw;
+}
+
+.PaddingBottom{
+    padding-bottom: 100px;
 }
