--- a/src/styles/Help.module.css
+++ b/src/styles/Help.module.css
@@ -9,3 +9,48 @@
     height: 13vw;
     width: auto;
 }
+
+.TussenTitels{
+    font-size: 5vw;
+    margin-top: 7.5vw;
+}
+
+.OnderTitels{
+    font-size: 3.5vw;
+    margin-left: 4vw;
+    margin-bottom: 1vw;
+}
+
+.SearchBalk{
+    width: 88%;
+    margin-left: 4vw;
+    margin-bottom: 1.5vw;
+    padding: 1.5vw;
+    margin-bottom: 5vw;
+}
+
+.optionsList {
+    display: flex;
+    flex-direction: column;
+    margin-left: 4vw;
+  }
+  
+.optionLabel {
+    margin-bottom: 1vw;
+}
+
+.SearchButton{
+    padding: 1.5vw;
+    width: 75%;
+    margin-left: 12vw;
+    text-decoration: none;
+    border: none;
+    border-radius: 2vw;
+    font-size: 3vw;
+    background-color: #D9D9D9;
+    margin-top: 8vw;
+}
+
+.SearchButton:hover{
+    background-color: #a8a8a8;
+}
