--- a/src/styles/Account.module.css
+++ b/src/styles/Account.module.css
@@ -1,11 +1,31 @@
-.Header{
-    background-color: #D9D9D9;
-    padding: 1.5vw;
-    padding-left: 2vw;
-    padding-top: 2vw;
+.TussenTitels{
+    font-size: 7vw;
+    margin-top: 7.5vw;
+    text-align: center;
 }
 
-.Logo{
-    height: 13vw;
-    width: auto;
+.OnderTitels{
+    font-size: 4.5vw;
+    text-align: center;
+    margin-bottom: 2vw;
+    color: #757575;
+}
+
+.SearchBalk{
+    width: 88%;
+    margin-left: 4vw;
+    padding: 1.5vw;
+    margin-bottom: 5.5vw;
+}
+
+.SearchButton{
+    padding: 1.5vw;
+    width: 75%;
+    margin-left: 12vw;
+    text-decoration: none;
+    border: none;
+    border-radius: 2vw;
+    font-size: 3vw;
+    background-color: #F29F05;
+    margin-top: 8vw;
 }
