--- a/src/styles/Account.module.css
+++ b/src/styles/Account.module.css
@@ -5,10 +5,9 @@
 }
 
 .OnderTitels{
-    font-size: 4.5vw;
+    font-size: 4vw;
     text-align: center;
     margin-bottom: 2vw;
-    color: #757575;
 }
 
 .SearchBalk{
@@ -26,6 +25,12 @@
     border: none;
     border-radius: 2vw;
     font-size: 3vw;
-    background-color: #F29F05;
+    background-color: #0362c7;
+    color: #F5F5F5;
     margin-top: 8vw;
+}
+
+.SearchButton:hover{
+    background-color: #007bff;
+    color: #F5F5F5;
 }
