--- a/src/styles/ButtonGroup.module.css
+++ b/src/styles/ButtonGroup.module.css
@@ -11,7 +11,8 @@
 .button {
   width: 100%;
   height: 100%;
-  background-color: #dcdcdc;
+  background-color: #0362c7;
+  color: #F5F5F5;
   border: none;
   border-radius: 5px;
   padding: 15px 15px;
@@ -20,5 +21,6 @@
 }
 
 .button:hover{
-  background-color: #a8a8a8;
+  background-color: #007bff;
+  color: #F5F5F5;
 }
