--- a/src/styles/FilterStation.module.css
+++ b/src/styles/FilterStation.module.css
@@ -1,30 +1,3 @@
-.Header{
-    background-color: #D9D9D9;
-    padding: 1.5vw;
-    padding-left: 2vw;
-    padding-top: 2vw;
-}
-
-.Logo{
-    height: 13vw;
-    width: auto;
-}
-
-.BackButton {
-    padding: 1.5vw;
-    width: 20%;
-    text-decoration: none;
-    border: none;
-    border-radius: 2vw;
-    background-color: #D9D9D9;
-    margin-top: 6vw;
-}
-
-.Back{
-    width: 7.5vw;
-    height: auto;
-}
-
 .TussenTitels{
     font-size: 7vw;
     margin-top: 7.5vw;
@@ -44,10 +17,13 @@
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    background-color:#D9D9D9;
+    color: #F5F5F5;
+    background-color:#0362c7;
     margin-bottom: 4vw;
-    padding: 4vw;
+    padding: 2.5vw;
     border-radius: 4vw;
+    width: 65%;
+    margin-left: 15%;
 }
 
 .Free{
