--- a/src/styles/Help.module.css
+++ b/src/styles/Help.module.css
@@ -1,15 +1,3 @@
-.Header{
-    background-color: #D9D9D9;
-    padding: 1.5vw;
-    padding-left: 2vw;
-    padding-top: 2vw;
-}
-
-.Logo{
-    height: 13vw;
-    width: auto;
-}
-
 .TussenTitels{
     font-size: 5vw;
     margin-top: 7.5vw;
@@ -47,10 +35,12 @@
     border: none;
     border-radius: 2vw;
     font-size: 3.5vw;
-    background-color: #D9D9D9;
+    background-color: #0362c7;
+    color: #F5F5F5;
     margin-top: 8vw;
 }
 
 .SearchButton:hover{
-    background-color: #a8a8a8;
+    background-color: #007bff;
+    color: #F5F5F5;
 }
