--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -11,11 +11,13 @@
     border: none;
     border-radius: 2vw;
     font-size: 3.5vw;
-    background-color: #D9D9D9;
+    background-color: #0362c7;
+    color: #F5F5F5;
 }
 
 .SearchButton:hover{
-    background-color: #a8a8a8;
+    background-color: #007bff;
+    color: #F5F5F5;
 }
 
 .SwiperSlide {
@@ -38,7 +40,6 @@
     font-size: 2.3vw;
     color: #4d4d4d;
     margin-left: 3.5vw;
-
 }
 
 .HelpContainer{
