--- a/src/styles/Layout.module.css
+++ b/src/styles/Layout.module.css
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     right: 0;
-    background-color: #F2DCE4;
+    background-color: #FFCE00;
     padding: 10px;
     display: flex;
     justify-content: space-between;
@@ -20,7 +20,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: #F2DCE4;
+    background-color: #FFCE00;
     padding: 10px;
     display: flex;
     justify-content: space-between;
@@ -44,11 +44,11 @@
 }
 
 .ButonLeft:focus{
-    color: #732727;
+    color: #F5F5F5;
     text-decoration: none;
 }
 
 .ButonRight:focus{
-    color: #732727;
+    color: #F5F5F5;
     text-decoration: none;
 }
