--- a/src/styles/FilterStation.module.css
+++ b/src/styles/FilterStation.module.css
@@ -18,7 +18,7 @@
     align-items: center;
     justify-content: space-evenly;
     color: #F5F5F5;
-    background-color:#0362c7;
+    background-color:#b309a575;
     margin-bottom: 4vw;
     padding: 2.5vw;
     border-radius: 4vw;
