--- a/src/styles/ButtonGroup.module.css
+++ b/src/styles/ButtonGroup.module.css
@@ -11,7 +11,7 @@
 .button {
   width: 100%;
   height: 100%;
-  background-color: #0362c7;
+  background-color: #b309a575;
   color: #F5F5F5;
   border: none;
   border-radius: 5px;
@@ -21,6 +21,6 @@
 }
 
 .button:hover{
-  background-color: #007bff;
+  background-color: #c251b9;
   color: #F5F5F5;
 }
