--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -11,7 +11,7 @@
     border: none;
     border-radius: 2vw;
     font-size: 3.5vw;
-    background-color: #b309a575;
+    background-color: #DD0800;
     color: #F5F5F5;
 }
 
