--- a/src/styles/ButtonGroup.module.css
+++ b/src/styles/ButtonGroup.module.css
@@ -11,7 +11,7 @@
 .button {
   width: 100%;
   height: 100%;
-  background-color: #b309a575;
+  background-color: #DD0800;
   color: #F5F5F5;
   border: none;
   border-radius: 5px;
