--- a/src/styles/Layout.module.css
+++ b/src/styles/Layout.module.css
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     right: 0;
-    background-color: #ffcc00b4;
+    background-color: #FFC107;
     padding: 10px;
     display: flex;
     justify-content: space-between;
@@ -20,7 +20,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: #ffcc00b4;
+    background-color: #FFC107;
     padding: 10px;
     display: flex;
     justify-content: space-between;
@@ -44,11 +44,11 @@
 }
 
 .ButonLeft:focus{
-    color: grey;
+    color: #916400;
     text-decoration: none;
 }
 
 .ButonRight:focus{
-    color: grey;
+    color: #916400;
     text-decoration: none;
 }
